--- a/demoGradle/Dockerfile
+++ b/demoGradle/Dockerfile
@@ -2,7 +2,8 @@ FROM ubuntu:latest AS build
 RUN apt-get update
 RUN apt-get install openjdk-17-jdk -y
 COPY . .
-RUN ./gradle bootJar --no-daemon
+RUN chmod +x gradlew && \
+    ./gradlew bootJar --no-daemon
 FROM openjdk:17-jdk-slim
 EXPOSE 8080
 COPY --from=build /app/build/libs/demo-1.jar /app.jar
