--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -6,5 +6,5 @@ RUN chmod +x mvnw && \
     ./mvnw bootJar --no-daemon
 FROM openjdk:17-jdk-slim
 EXPOSE 8080
-COPY --from=build /app/build/libs/demo-1.jar /app.jar
+COPY --from=build /build/libs/demo-1.jar /app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
